src/cli/snapshots/mise__cli__affected__tests__affected_report_json_snapshot_without_target.snap
---
source: src/cli/affected.rs
expression: "&report"
---
{
  "schema": "mise-affected-experimental",
  "version": 1,
  "base": "main",
  "head": "HEAD",
  "projects": [
    "//libs/shared"
  ],
  "target_tasks": null
}
